$Id$

Denora v1.4.4-SVN
-----------------

Additions
n/a

Changes
09/05/04 r285 Updated GeoIP.dat

Fixes
09/05/16 r286 Fixed autoop not working anymore on chanstats add [closes #547]
09/05/07 r286 Fixed segfault on broken configuration file
09/05/04 r285 Fixed inspircd12 requiring usermode +S [closes #545]
09/05/03 r283 Fixed ngircd handling of NICK and SERVER messages
09/05/03 r282 Reverted r267 which broke things on channels without modes
09/05/03 r281 Fixed crash when setting debug 2 with logchan enabled [closes #539]
09/04/27 r281 Fixed UMODE r change in Plexus3 [closes #543]
09/04/21 r279 Fixed inspircd ADDLINE using wrong timestamp [closes #542] 
09/04/21 r279 Removed handling of SVSNICK from inspircd modules [closes #540]
09/03/24 r278 Fixed crash on missing channel mode parameter

Removals
n/a

Developers
Denora Team <dev@denorastats.org>

Contributors
n/a


Denora v1.4.3
-------------

Additions
09/03/04 r266 Added support for nick change flood chanmode
09/02/25 r257 Improved nick tracking on nick change for +r users
09/02/22 r250 Added InspIRCd 1.2 support [closes #527]

Changes
09/03/10 r270 Updated GeoIP.dat
09/02/22 r249 CTCP VERSION is now handled by alias if present

Fixes
09/03/15 r273 Fixed crash on incoming global notice (introduced in r249)
09/03/13 r272 Fixed autoop not working properly with partonempty disabled
09/03/13 r272 Fixed crash on restart/shutdown with partonempty enabled
09/03/12 r271 Always create global ustats record if not existing
09/03/10 r270 Fixed crash in chanstats [closes #531]
09/03/09 r268 Fixed inspircd12 counting opers twice
09/03/06 r267 SQL chans now default to +s to avoid race condition [closes #494]
09/03/04 r264 Fixed SQL not always working after reinitialization [closes #529]
09/03/02 r261 Make inspircd12 module check for TS6 and numeric on load
09/02/26 r256 Fixed missing NICK handling in inspircd12
09/02/26 r256 Nick tracking no longer removes old nick alias on nick change