@@ -10,6 +10,7 @@ Changes
 09/05/04 r285 Updated GeoIP.dat
 
 Fixes
+09/05/17 r287 [1] Fixed nefarious MODE message handling [closes #548]
 09/05/16 r286 Fixed autoop not working anymore on chanstats add [closes #547]
 09/05/07 r286 Fixed segfault on broken configuration file
 09/05/04 r285 Fixed inspircd12 requiring usermode +S [closes #545]
@@ -28,7 +29,7 @@ Developers
 Denora Team <dev@denorastats.org>
 
 Contributors
-n/a
+[1] Jobe <jobe@mdbnet.co.uk>
 
 
 Denora v1.4.3
